💄 fixing other z-index conflicts

--- a/src/assets/styles/components/modules/cart.scss
+++ b/src/assets/styles/components/modules/cart.scss
@@ -4,7 +4,7 @@
 .cart-wrapper{
     position: fixed;
     background-color: #232323E0;
-    z-index: 2;
+    z-index: 10;
     width: 100%;
     height: 100%;
     top: 0;
