--- a/src/assets/styles/components/modules/filters/search.scss
+++ b/src/assets/styles/components/modules/filters/search.scss
@@ -3,7 +3,7 @@
 
 .search {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     left: 5%;
     width: 432px;
     border: solid 1px map-get($brands-primary, "black");
